minor edit to jupyter notebook

--- a/modelfraud.ipynb
+++ b/modelfraud.ipynb
@@ -325,6 +325,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed99f83e-8c1d-4fe5-973e-254a23930074",
+   "metadata": {},
+   "source": [
+    "### Fraud Rates by Transaction Category\n",
+    "\n",
+    "The bar chart above illustrates the fraud rates for different transaction categories. Key insights include:\n",
+    "\n",
+    "- Some categories have notably higher fraud rates compared to others.\n",
+    "- Categories like `grocery_pos`, `misc_net`, and `shopping_net` show relatively higher fraud rates.\n",
+    "- On the other hand, categories such as `health_fitness` and `food_dining` have lower fraud rates."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "6d27a96b-1f45-4422-8bf6-ede2762fb4e8",
@@ -356,16 +370,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed99f83e-8c1d-4fe5-973e-254a23930074",
+   "id": "4e628eac-18a1-4990-bd99-413be7e105f9",
    "metadata": {},
    "source": [
-    "### Fraud Rates by Transaction Category\n",
+    "### Fraud Rates by Season\n",
     "\n",
-    "The bar chart above illustrates the fraud rates for different transaction categories. Key insights include:\n",
+    "Key observations:\n",
     "\n",
-    "- Some categories have notably higher fraud rates compared to others.\n",
-    "- Categories like `grocery_pos`, `misc_net`, and `shopping_net` show relatively higher fraud rates.\n",
-    "- On the other hand, categories such as `health_fitness` and `food_dining` have lower fraud rates."
+    "- The highest fraud rates are observed in the Winter.\n",
+    "- Summer has comparatively lower fraud rates.\n",
+    "\n",
+    "These seasonal variations can be crucial for implementing seasonal-specific fraud detection strategies, focusing more on periods with higher fraud rates."
    ]
   },
   {
@@ -400,17 +415,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e628eac-18a1-4990-bd99-413be7e105f9",
+   "id": "3c9928a3-2143-403b-b37f-320c001f6c4c",
    "metadata": {},
    "source": [
-    "### Fraud Rates by Season\n",
+    "### Fraud Rates by Transaction Amount Category\n",
     "\n",
-    "Key observations:\n",
+    "Key insights include:\n",
     "\n",
-    "- The highest fraud rates are observed in the Winter.\n",
-    "- Summer has comparatively lower fraud rates.\n",
+    "- We observe the highest fraud rate with Large amount transactions.\n",
+    "- Medium and Small amount transactions have relatively very small fraud rate.\n",
     "\n",
-    "These seasonal variations can be crucial for implementing seasonal-specific fraud detection strategies, focusing more on periods with higher fraud rates."
+    "This trend suggests that higher transaction amounts are more susceptible to fraud. This insight is critical for implementing stricter fraud detection measures on higher-value transactions to mitigate risk."
    ]
   },
   {
@@ -453,21 +468,6 @@
     "plt.xlabel('Fraud Rate')\n",
     "plt.ylabel('Transaction Amount Category')\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c9928a3-2143-403b-b37f-320c001f6c4c",
-   "metadata": {},
-   "source": [
-    "### Fraud Rates by Transaction Amount Category\n",
-    "\n",
-    "Key insights include:\n",
-    "\n",
-    "- We observe the highest fraud rate with Large amount transactions.\n",
-    "- Medium and Small amount transactions have relatively very small fraud rate.\n",
-    "\n",
-    "This trend suggests that higher transaction amounts are more susceptible to fraud. This insight is critical for implementing stricter fraud detection measures on higher-value transactions to mitigate risk."
    ]
   },
   {
@@ -515,7 +515,9 @@
   {
    "cell_type": "markdown",
    "id": "f3676137-8f72-4cd5-92e0-c597ec15a294",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Distribution of Transaction Amounts for Fraud and Non-Fraud Transactions\n",
     "\n",
